hphp/hack/test/typecheck/expression_trees/splice_err3.php.like_types.exp
File "splice_err3.php", line 7, characters 15-21:
Expected `ExprTree<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "splice_err3.php", line 30, characters 5-38:
  But got `dynamic` because it is an unenforceable type
File "splice_err3.php", line 9, characters 15-15:
Expected `ExprTree<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "splice_err3.php", line 21, characters 46-76:
  But got `dynamic` because it is an unenforceable type
File "splice_err3.php", line 13, characters 13-13:
Expected `ExprTree<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree (Typing[4110])
  File "splice_err3.php", line 21, characters 46-76:
  But got `dynamic` because it is an unenforceable type
